# afp-code

./: .gitignore  README.md  contributors.txt  stack-9.12.yaml  stack-no-win.yaml  stack.yaml
.github/workflows/: ci.yml
13/: Expr.hs  Middle.hs  Typed.hs
InsertionSortAgda/: Everything.agda  InsertionSortLe.agda  Le.agda  LengthIsortChain.agda  LengthIsortRewrite.agda  Logic.agda
InsertionSortAgda/html/: InsertionSortLe.html  LengthIsortChain.html  Logic.html
L1/: .gitignore  AFPlecture1.cabal  LazyIO.hs  Lect1.hs  Makefile  QuizPrimeCheck.hs  README.md  SpaceLeaks.hs  TypeClasses.hs  TypeClasses2025.hs  package.yaml
L10/: AFPlecture10.cabal  LLRBTreeBalInsert.agda  package.yaml
L11/: AnyAll.agda  HuttonsRazor.agda  InsertionSortBool.agda  Let.agda  Makefile  README.md  TaggedInterpreter.agda  TaggedInterpreterAux.agda  TaggedInterpreterDo.agda  Tagless.agda  TaglessDo.agda
L11/html/: Everything.html  InsertionSortBool.html  Le.html  LengthIsortRewrite.html
L12/: ExprTypeIndexed.hs  FakingIt.cabal  README.md  Tree.hs  TreeNat.hs  Vec.hs  package.yaml
L13/: typemodeling1.cabal
L13/Expr/: Gen.hs
L15/: Add.hs  TypeBasedM.hs
L2/: AFPlecture2.cabal  README.md  package.yaml
L2/src/: ANSI.hs  Animate.hs  Example.hs  ExampleShape.hs  ExampleSignal.hs  InsideTriangle.hs  Matrix.hs  Render.hs  Shape.hs  Signal.hs
L2/src/Shape/: Deep.hs  Shallow.hs
L2/src/Signal/: Deep.hs  Example.hs  Shallow.hs
L3/: AFPlecture3.cabal  Interpr.hs  MonadLawProof.md  package.yaml
L4/: AFPlecture4.cabal  EDSL_Deep1.hs  EDSL_Deep2.hs  EDSL_Shallow.hs  Functors.hs  package.yaml
L5/: AFPlecture5.cabal  AppAlt.hs  Parser0.hs  Parser1.hs  Parser2.hs  ParserApplicative.hs  Tree.hs  package.yaml
L6/: AFPlecture6.cabal  Expr_Parser.hs  Interpreter0.hs  Interpreter1.hs  Interpreter2.hs  LiveMonadTransformers.hs  MonadTransformers.hs  interp.cabal  package.yaml
L7/: Expr_Parser.hs  Interpreter3.hs  Interpreter4.hs  Interpreter5.hs  Interpreter7.hs  LiveInterpreter2025.hs  LiveInterpreter2025Part1.hs  LiveInterpreter2025Part10.hs  LiveInterpreter2025Part11.hs  LiveInterpreter2025Part12.hs  LiveInterpreter2025Part2.hs  LiveInterpreter2025Part3.hs  LiveInterpreter2025Part4.hs  LiveInterpreter2025Part5.hs  LiveInterpreter2025Part6.hs  LiveInterpreter2025Part7.hs  LiveInterpreter2025Part8.hs  LiveInterpreter2025Part9.hs  LiveInterpreter2025WIP.hs  interp.cabal  package.yaml
L8/: .hlint.yaml  AFPlecture8.cabal  EqProofList.hs  EqProofList2025.hs  EqualityProof.hs  Expr_Parser.hs  Interpreter3.hs  Interpreter4.hs  Interpreter5.hs  Interpreter6.hs  List.agda  List2025.agda  ListStdLib.agda  LiveInterpreter.hs  LiveList.agda  MT.hs  interp.cabal  package.yaml
L9/: AFPlecture9.cabal  TwoThreeTree.agda  package.yaml
L9-TreeSort/: Everything.agda  InsertionSort.hs  Makefile  Prelude.agda  TreeSortOrd.agda
LazyEvaluator/: Interpreter.hs  Lazy.cf  LazyEvaluator.cabal  Main.hs  Makefile  package.yaml
LazyEvaluator/Lazy/: Abs.hs  Lex.x  Par.y  Print.hs
LazyEvaluator/examples/: Church.hs  Ex1.hs  Makefile
Resumption/: CHANGELOG.md  Resumption.cabal
Resumption/src/: Resumption.hs
TypeBasedModelingI/: Parser.hs  package.yaml  typemodeling1.cabal
TypeBasedModelingII/: AFPlecture15.cabal  Add.hs  package.yaml
assignment1/turtle-graphics-0.1.0.0/: stack.yaml  turtle-graphics.cabal
assignment1/turtle-graphics-HGL/: README.md  TurtleGraphics.hs  package.yaml  turtle-graphics-HGL.cabal
assignment1/turtle-graphics-gloss/: README.md  package.yaml  turtle-graphics-gloss.cabal  turtle-graphics.cabal
assignment1/turtle-graphics-gloss-0.1.0.0/: TurtleGraphics.hs  turtle-graphics-gloss.cabal
assignment1/turtle-graphics-glut/: README.md  TurtleGraphics.hs  package.yaml  turtle-graphics-glut.cabal
assignment1/turtle-graphics-glut-0.1.0.0/: package.yaml  turtle-graphics-glut.cabal  turtle-graphics.cabal
assignment2/replay/: Replay.hs  package.yaml  replay.cabal  stack.yaml
assignment2/replay-0.1.0.0/: Replay.hs  package.yaml  replay.cabal
assignment2/replay-0.1.0.0/executable/: Example.hs  TestScotty.hs  Web.hs
assignment2/replay-0.1.0.0/test/: Test.hs
assignment2/replay/example/: Example.hs
assignment2/replay/executable/: Main.hs
assignment2/replay/test/: Test.hs
assignment2/replay/testscotty/: TestScotty.hs
assignment3/: All.agda  Prelude.agda  mtl.agda-lib
assignment3/Control/: Monad.agda
assignment3/Control/Monad/: Except.agda  Reader.agda
assignment3/Control/Monad/Trans/: Identity.agda  List.agda  Reader.agda  State.agda  Writer.agda
assignment3/Data/: Monoid.agda
assignment3/Data/Functor/: Compose.agda  Identity.agda
assignment3/agda-mtl/: build.sh
assignment3/agda-mtl/Control/Monad/: Cont.agda  State.agda  Writer.agda
assignment3/agda-mtl/Control/Monad/Trans/: Class.agda  Except.agda  Maybe.agda
assignment3/basic1/: Basic.hs  Expr_Parser.hs
assignment3/basic2/: Basic.hs  Expr_Parser.hs
assignment3/ifc/basic1/: Basic.hs  Expr_Parser.hs  ifc1.cabal  package.yaml
assignment3/ifc/basic2/: Basic.hs  Expr_Parser.hs  ifc.cabal  ifc2.cabal  package.yaml
live/L10/: AFPlecture10Live.cabal  Everything.agda  LLRBTreeBalInsert.agda  Makefile  TwoThree.hs  TwoThreeTree.agda  package.yaml
live/L11/: AnyAll.agda  HuttonsRazor.agda  Let.agda  README.md  TaggedInterpreter.agda  TaggedInterpreterAux.agda  TaggedInterpreterDo.agda  Tagless.agda
live/L12/: ExprTypeIndexed.hs  ExprTypeRep.hs  FakingItLive.cabal  Tree.hs  TreeNat.hs  Vec.hs  package.yaml
live/L8/: AFPlecture8Live.cabal  EqProofList.hs  EqualityProof.hs  List.agda  ListStdLib.agda  package.yaml
live/L9-TreeSort/: InsertionSort.hs  Makefile  Prelude.agda  TreeSortOrd.agda
