cabal-version:       >=1.10

name:                typemodeling1
version:             0.1.0.0
author:              Alejandro Russo
build-type:          Simple

library
  hs-source-dirs: .
  exposed-modules:
    Expr
    Middle
    Typed
  other-modules:
    Expr.Gen
    Parser
  default-language:    Haskell2010
  build-depends:
    base >=4.12 && <5
    , QuickCheck
