cabal-version:       >=1.8
name:                AFPlecture2
version:             2016.0
synopsis:            AFP course lecture 2
license:             BSD3
license-file:        LICENSE
author:              Patrik Jansson, Alejandro Russo
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Matrix,
                       Shape, Shape.Deep, Shape.Shallow,
                       Signal, Signal.Deep, Signal.Shallow, Signal.Example,
                       Animate, ANSI, Render,
                       Example, ExampleShape
  build-depends:       base >= 4 && < 5



-- For technical reasons, the executable has to be in a separate directory.
executable example
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base
                     , AFPlecture2
