cabal-version:       >=1.10

name:                interp
version:             0.1.0.0
author:              Alejandro Russo
build-type:          Simple

library
  hs-source-dirs: .
  default-language:    Haskell2010
  exposed-modules:
    Interpreter3
    Interpreter4
    Interpreter5
    Interpreter6
  other-modules:
    Expr_Parser
    MT
  build-depends:
    base >=4.12 && <5
    , parsec
    , mtl
    , containers
