cabal-version:      3.0
name:               Resumption
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Alejandro Russo
maintainer:         russo@chalmers.se
-- copyright:
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Resumption
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
