cabal-version:      3.0
name:               Resumption
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Alejandro Russo
category:           Concurrency
build-type:         Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:  Resumption
  default-language: Haskell2010
  build-depends:
    , base
    , mtl
