cabal-version:       3.4

-- For documentation of .cabal syntax, see https://haskell.org/cabal/users-guide/

name:                turtle-graphics
version:             0.1.0.0
synopsis:            A graphics library based on artistic turtles
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Graphics
build-type:          Simple

library
  exposed-modules:
    TurtleGraphics
    Turtle
  -- other-modules:
  build-depends:
    , base >= 4 && < 5
    , HGL
    -- Add anything your package depends on here

executable coolturtle
  hs-source-dirs:      executable
  main-is:             Example.hs
  build-depends:
    , base >= 4 && < 5
    , turtle-graphics
