name:                turtle-graphics-gloss
version:             0.1.0.0
synopsis:            A graphics library based on artistic turtles
license:             BSD3
license-file:        LICENSE
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     TurtleGraphics,
                       Turtle
  build-depends:       base >= 4 && < 5,
                       gloss

executable coolturtle
  hs-source-dirs:      executable
  build-depends:       base >= 4 && < 5,
                       turtle-graphics-gloss
  main-is:             Example.hs
