cabal-version:       3.4
name:                turtle-graphics-gloss
version:             0.1.0.0
synopsis:            A graphics library based on artistic turtles
license:             BSD-3-Clause
license-file:        LICENSE
category:            Graphics
build-type:          Simple

library
  exposed-modules:
    TurtleGraphics
    Turtle
  build-depends:
    , base >= 4 && < 5
    , gloss

executable coolturtle
  hs-source-dirs:      executable
  main-is:             Example.hs
  build-depends:
    , base >= 4 && < 5
    , turtle-graphics-gloss
