cabal-version:       3.4

-- For documentation on .cabal syntax, see http://haskell.org/cabal/users-guide/

name:                turtle-graphics-glut
version:             0.1.0.0
synopsis:            A graphics library based on artistic turtles
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Graphics
build-type:          Simple

library
  exposed-modules:
    TurtleGraphics
    Turtle
  -- other-modules:
  build-depends:
    , base >= 4 && < 5
    , OpenGL
    , GLUT
    -- Add anything your package depends on here

executable glutturtle
  hs-source-dirs:      executable
  main-is:             Example.hs
  build-depends:
    , base >= 4 && < 5
    , turtle-graphics-glut
