name:                replay
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Replay
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.12
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable testscotty
  main-is:             TestScotty.hs
  build-depends:       base >=4.10 && <4.12,
                       scotty >=0.11.0 && <0.12,
                       text >=1.2.2 && <1.3
  hs-source-dirs:      executable
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  build-depends:       base >=4.10 && <4.12,
                       replay,
                       time >=1.8.0 && <1.9
  hs-source-dirs:      executable
  default-language:    Haskell2010

executable web
  main-is:             Main.hs
  other-modules:       Web
  build-depends:       base >=4.10 && <4.12,
                       replay,
                       scotty >=0.11.0 && <0.12
  hs-source-dirs:      executable
  default-language:    Haskell2010

Test-Suite test-replay
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.10 && <4.12,
                       replay
  hs-source-dirs:      test
  default-language:    Haskell2010
