cabal-version:       2.2

name:                replay
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple

library
  exposed-modules:     Replay
  -- other-modules:
  default-language:    Haskell2010
  build-depends:
    , base >=4.11 && <4.20

executable testscotty
  hs-source-dirs:      executable
  main-is:             TestScotty.hs
  default-language:    Haskell2010
  build-depends:
    , base
    , exceptions
    , scotty >=0.11.0 && <0.22
    , text

executable example
  hs-source-dirs:      executable
  main-is:             Example.hs
  default-language:    Haskell2010
  build-depends:
    , base
    , replay
    , time

executable web
  hs-source-dirs:      executable
  main-is:             Main.hs
  other-modules:       Web
  default-language:    Haskell2010
  build-depends:
    , base
    , replay
    , scotty >=0.11.0 && <0.22

Test-Suite test-replay
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:
    , base
    , replay
